# game_prototype

./: .gitattributes  .gitignore  Cargo.toml  build.rs  flake.nix
assets/models/: tube.gltf
assets/models/houdini/: capsule.gltf  torchship.gltf
assets/models/houdini_cube/: cube.gltf
assets/models/ships/: station.gltf
assets/models/ships/iss/: ISS_stationary.gltf
assets/models/torus/: torus.gltf
assets/shaders/: billboard.vert  grid.frag  grid.vert  healthbar.frag  healthbar.vert  hot.frag  hot.vert  icon.frag  unitsymbol.frag
assets/shaders/overlay/: healthbar.frag  healthbar.vert  icon.vert
assets/shaders/skysphere/: skysphere.frag  skysphere.vert
assets/shaders/toon/: outline.frag  toon.frag  toon.sprj  toon.vert
assets/shaders/toon/shaders/: DepthPS.glsl  DepthVS.glsl  ExtractNormalVS.glsl  Outline2PS.vk  Outline2VS.vk  OutlinePS.glsl  PostVS.glsl  toon_SimplePS.glsl
crates/: bindings.dot
crates/edgedetection/: Cargo.toml
crates/edgedetection/src/: main.rs
draw_textures/: Cargo.toml
draw_textures/src/: main.rs
shadered_dev/: toon.sprj  tube.gltf
shadered_dev/shaders/: ExtractDepthPS.glsl  ExtractDepthVS.glsl  ExtractNormalPS.glsl  PostPS.glsl  toon_SimpleVS.glsl
src/: camera.rs  debug.rs  grid.rs  healthbar.rs  main.rs  movement.rs  overlay.rs  physics.rs  selection.rs  ship.rs
src/input/: graph.rs  graphmap.rs  inputmap.rs  keymap.rs  mod.rs
src/materials/: mod.rs  overlay.old.rs  overlay.rs
src/materials/toon/: mod.rs
src/orders/: mod.rs
src/player/: camera.rs  commands.rs  mod.rs  selection.rs
src/skysphere/: mod.rs
src/units/: mod.rs  movement.rs  ship.rs
