[package]
name = "game_prototype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
  "draw_textures"
]

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_rapier3d = "*"
bevy_mod_picking = { version = "0.4" }
bevy_mod_raycast = { version = "*" }
bevy_mod_debugdump = "*"
bevy_prototype_debug_lines = "0.3.2"
bevy_prototype_lyon = "*"
bevy-inspector-egui = "*"
num-derive = "0.3.3"
num-traits = "*"
log = "*"
env_logger = "*"
