[package]
name = "game_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/draw_textures", "crates/edgedetection"]

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy_rapier3d = "*"
bevy_mod_picking = { version = "*" }
bevy_mod_raycast = { version = "*" }
bevy_mod_debugdump = "*"
bevy_prototype_debug_lines = { version = "0.6", features = ["3d"] }
#bevy_prototype_lyon = "*"
bevy-inspector-egui = "*"
const-random = "*"
num-derive = "*"
num-traits = "*"
log = "*"
env_logger = "*"
petgraph = "*"
anyhow = "*"
tempfile = "3"

[build-dependencies]
shaderc = "0.7"
glob = "0.3"
anyhow = "*"
walkdir = "*"
